[package]
name = "smallring"
version = "0.2.2"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "High-performance ring buffer with automatic stack/heap optimization | 高性能环形缓冲区，支持栈/堆自动优化"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/smallring"
homepage = "https://github.com/ShaoG-R/smallring"
documentation = "https://docs.rs/smallring"
keywords = ["spsc", "ringbuffer", "lockfree", "queue", "concurrent"]
categories = ["concurrency", "data-structures"]
readme = "README.md"
rust-version = "1.87"

[dependencies]
loom = { version = "0.7.2", features = ["futures"], optional = true }
portable-atomic = { version = "1", default-features = false, optional = true }
portable-atomic-util = { version = "0.2", default-features = false, features = [
    "alloc",
], optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
rtrb = "0.3.2"

[features]
default = []
loom = ["dep:loom"]
portable-atomic = ["dep:portable-atomic", "dep:portable-atomic-util"]


[[bench]]
name = "spsc_benchmark"
harness = false
